--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ input,button,select,textarea{outline:none}li{list-style:none}img{border:none}tex
 h1,h2,h3,h4,h5,h6 {font-weight: normal; font-size: 100%;}
 table{border-collapse: collapse;  border-spacing: 0;}
 address,caption,cite,code,dfn,em,strong,th,var{font-weight: normal; font-style: normal;}
-body{font-size: 12px; font-family: Arial, 'microsoft yahei'; line-height: 1.7; background-color: #161920; word-break: break-all; word-wrap: break-word;}
+body{font-size: 12px; font-family: Arial, 'microsoft yahei'; line-height: 1.7; background-color: #161920; word-break: break-all; word-wrap: break-word; overflow: hidden;}
 input,textarea,button{font-size:12px; font-family:"Hiragino Sans GB","microsoft yahei",\5b8b\4f53,Verdana,Arial}
 input[type="text"],input[type="button"],input[type="submit"],input[type="reset"]{-webkit-appearance: none;}
 a:link,a:visited{text-decoration:none; outline:none}
@@ -13,5 +13,72 @@ a:hover{text-decoration:none;}
 .clearfix:after{content:"";display:block;height:0;clear:both;visibility:hidden;}
 .clearfix{*+height:1%}
 
+.container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.bg_left{
+    position: absolute; 
+    top: -50%;
+    left: -21.5%;
+    width: 40%;
+    height: 150%;
+    background: #fff; 
+    opacity: 0.1; 
+    filter: alpha(opacity=10);
+    -webkit-animation: flyLeft 0.5s ease-in-out both;
+    -o-animation: flyLeft 0.5s ease-in-out both;
+    animation: flyLeft 0.5s ease-in-out both;
+}
+.bg_right{
+    position: absolute;
+    bottom: -35%;
+    right: -26%;
+    width: 40%;
+    height: 150%;
+    background: #ffffff;
+    opacity: 0.1;
+    filter: alpha(opacity=10);
+    -webkit-animation: flyRight 0.5s ease-in-out both;
+    -o-animation: flyRight 0.5s ease-in-out both;
+    animation: flyRight 0.5s ease-in-out both;
+}
 
 
+@keyframes flyLeft {
+    0%{
+        -webkit-transform: translateX(-100%) rotate(30deg);
+        -moz-transform: translateX(-100%) rotate(30deg);
+        -ms-transform: translateX(-100%) rotate(30deg);
+        -o-transform: translateX(-100%) rotate(30deg);
+        transform: translateX(-100%) rotate(30deg);
+
+    }
+    100%{
+        -webkit-transform: translateX(0) rotate(30deg);
+        -moz-transform: translateX(0) rotate(30deg);
+        -ms-transform: translateX(0) rotate(30deg);
+        -o-transform: translateX(0) rotate(30deg);
+        transform: translateX(0) rotate(30deg);
+    }
+}
+
+@keyframes flyRight {
+    0%{
+        -webkit-transform: translateX(100%) rotate(30deg);
+        -moz-transform: translateX(100%) rotate(30deg);
+        -ms-transform: translateX(100%) rotate(30deg);
+        -o-transform: translateX(100%) rotate(30deg);
+        transform: translateX(100%) rotate(30deg);
+    }
+    100%{
+        -webkit-transform: translateX(0) rotate(30deg);
+        -moz-transform: translateX(0) rotate(30deg);
+        -ms-transform: translateX(0) rotate(30deg);
+        -o-transform: translateX(0) rotate(30deg);
+        transform: translateX(0) rotate(30deg);
+    }
+}
